--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^19.2.0",
+    "react-ascii-text": "^0.0.4",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
